small alignment fixes

--- a/styles/main.css
+++ b/styles/main.css
@@ -45,7 +45,13 @@ button {
     display: block;
     font-size: 16px;
     color: white;
-    padding: 10px 20px;
+    padding: 10px 30px;
+}
+
+.btn-seethrough:focus {
+    outline: none;
+    box-shadow: none;
+    border:2px solid transparent;
 }
 
 .btn-seethrough a:hover {
@@ -108,6 +114,7 @@ header .container {
 }
 
 .nav-header ul {
+    padding-top: 6px;
     position: relative;
     list-style-type: none;
 }
@@ -119,6 +126,7 @@ header .container {
 }
 
 .nav-header li a {
+    font-size: 14px;
     text-transform: uppercase;
 }
 
